Fixing the mobile menu causing overflow

--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -45,6 +45,8 @@ body {
     width: 100vw;
     justify-content: space-between;
     margin-top: 40px;
+    position: relative;
+    overflow: hidden;
     &__logo {
         fill: white;
         margin-left: 55px;
